BI: Viewport preview fails updating in Texture shading mode #47652

Closed
opened 2016-03-02 06:36:13 +01:00 by Leon Cheung · 9 comments
Member

System Information
Windows 8 64bit | GTX680

Blender Version
Broken: 2.77 509270e

Short description of error
When tweaking material setting, viewport preview doesn't update until interaction mode switched.

Exact steps for others to reproduce the error
The title tells everything, and no example file needed imho.

**System Information** Windows 8 64bit | GTX680 **Blender Version** Broken: 2.77 509270e **Short description of error** When tweaking material setting, viewport preview doesn't update until interaction mode switched. **Exact steps for others to reproduce the error** The title tells everything, and no example file needed imho.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2016-03-08 13:05:55 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42, caused by 67fe572, mind having a look?

@ideasman42, caused by 67fe572, mind having a look?

Unable to redo this bug, tested:

  • with/without render preview
  • with/without subsurf
  • texture and material shading modes.
  • both image & procedural texture (which only render preview...).

Please include an example file.

Unable to redo this bug, tested: - with/without render preview - with/without subsurf - texture and material shading modes. - both image & procedural texture (which only render preview...). Please include an example file.

Manged to redo (the issue was I had UV's on the model), investigating...

Manged to redo (the issue was I had UV's on the model), investigating...

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 6276726bc4

This issue was referenced by 6276726bc4594f61753e51b8e877cf3c5018c808
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47652
No description provided.