Fix T47652: Texture shading mode fails to update material colors